# androidsolitaire

./: LICENSE  build.gradle
app/: build.gradle
app/src/androidTest/java/jimblackler/net/solitaire/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: fragment.fsh  vertex.vsh
app/src/main/assets/web/: about.html  rules.html  style.css
app/src/main/cpp/: CMakeLists.txt  Controller.cpp  Controller.h  Engine.cpp  Engine.h  FileUtils.cpp  FileUtils.h  GlUtils.cpp  GlUtils.h  Renderer.cpp  Renderer.h  Sprite.cpp  Sprite.h  Textures.cpp  Textures.h  main.cpp  native-lib.cpp
app/src/main/cpp/game/: Action.h  CardList.h  DragHandler.h  GameController.cpp  GameController.h  GameState.cpp  GameState.h  MathUtils.h  Rules.h  VectorUtils.h
app/src/main/java/jimblackler/net/solitaire/: GlConstants.java  GlService.java  GlUtils.java  MainActivity.java  MainLib.java  SurfaceView.java  Textures.java
app/src/main/java/net/jimblackler/solitaire/: AboutActivity.java  Common.java  GearsActivity.java  HtmlActivity.java  MainActivity.java  RulesActivity.java  SettingsActivity.java
app/src/main/res/layout/: activity_gears.xml  activity_html.xml  activity_main.xml  activity_settings.xml
app/src/main/res/raw/: apple_compressed.astc
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  styles.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/xml/: preferences.xml
app/src/test/java/jimblackler/net/solitaire/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
